fix: bold on hover layout shift in vuetify selects

--- a/solution/ui/regulations/css/scss/partials/_subjects.scss
+++ b/solution/ui/regulations/css/scss/partials/_subjects.scss
@@ -295,6 +295,19 @@
             margin-top: 12px;
         }
     }
+
+    .v-list-item-subtitle {
+        height: 0;
+        visibility: hidden;
+        overflow: hidden;
+        user-select: none;
+        pointer-events: none;
+        font-weight: 700;
+
+        @media speech {
+            display: none;
+        }
+    }
 }
 
 #subjectsApp.repository-view {
